tests/paczka1/fuzzy1/18253629.err
Error in line 5: xst0chO5ZOR S425 64,66
Error in line 15: S373 S373 30,9
Error in line 17: S373 S777 98,7
Error in line 21: xst0chO5ZOR S777 6,1
Error in line 27: q7mvJz A109 31,9
Error in line 34: BRmFZ57 S373 87,3
